Flowmini/flowmini_v23_token_tree_bridge/examples/pass/odd_values_continue.flow
program odd_values_continue

main {
    arr   : list<int>([1,2,3,4,5])
    len   : int(length(arr))
    zero  : int(0)
    one   : int(1)
    two   : int(2)
    i     : int(0)
    value : int(0)
    rem   : int(0)

    while i < len {
        arr[i] -> value
        value % two -> rem

        if rem == zero {
            i + one -> i
            continue
        }

        print value
        i + one -> i
    }
}
