Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_list_wrong_type.flow
program bad_list_wrong_type

main {
    arr : list<int>([1,2,3])
    i   : int(0)

    arr -> arr[i]
}
